# supplychain-copilot

./: .gitignore  README.md  pyproject.toml  requirements.txt  改进.md  改造.md
.streamlit/: config.toml
api/: main.py  scenarios.py
api/data/: mock_data.py
api/routes/: chat.py  workbench.py
api/schemas/: chat.py  workbench.py
api/services/: copilot.py
app/: main.py  ui.py
core/: config.py  demo_constants.py  evidence.py  kpi_parse_utils.py  prompts.py  qualification_rules.py  risk_rules.py  router_overrides.py
data/: bm25_index.pkl  init_demo_db.py  metrics_dictionary.json  ratti_copilot_demo.db  supplychain_kpi.db
data/docs/: supplier_policy_demo.txt
docs/ratti/: 00_README.md  01_PRD_Short.md  02_Data_Dictionary.md  03_Prompt_Tool_Design.md  04_Evaluation_Set.md  05_Risk_Boundary_Design.md  06_Resume_Positioning.md
eval/: REGRESSION.md  __init__.py  _inspect_failures.py  _smoke_failed.py  baseline_audit.md  generate_regression_log.py  judges.py  run_rag_eval.py  run_ratti_e2e_smoke.py  run_router_eval.py
eval/datasets/: chat_manual_eval.json  rag_eval.json  ratti_eval_25.json  (+1 more)
frontend/: index.html  package-lock.json  package.json  vite.config.ts
graph/: graph.py  nodes.py  state.py
ingestion/: build_vectorstore.py  chunker_registry.py  export_ratti_policies.py
rag/: bm25_index.py  hybrid_retriever.py  query_expansion.py  rerank.py  retriever.py
tests/: test_kpi_parse_normalize.py  test_qualification_checklist.py  test_router_overrides_zh.py
tools/: embed_portfolio_images.py  kpi_sql_builder.py  patch_portfolio_html.py  sql_tools.py
(+62 files in other folders)
